[gd_scene load_steps=15 format=3 uid="uid://y6y15auebaue"]

[ext_resource type="Script" path="res://Code/Global/TransformListener.gd" id="1_de0vp"]
[ext_resource type="Script" path="res://Assets/Levels/Tutorial/tutorial.gd" id="1_i3gf4"]
[ext_resource type="PackedScene" uid="uid://btb2b1yyaul6o" path="res://Assets/Player/player.tscn" id="2_y5e70"]
[ext_resource type="Script" path="res://Code/camera_2d.gd" id="3_fudyo"]
[ext_resource type="Script" path="res://Assets/Levels/Tutorial/color_rect.gd" id="4_7o7v3"]
[ext_resource type="PackedScene" uid="uid://kx7mp1vt0lrc" path="res://Assets/Hud/hud.tscn" id="4_asu40"]
[ext_resource type="PackedScene" uid="uid://cvvbwhwhy7i1o" path="res://Assets/Spikes/spikes.tscn" id="6_vnexj"]
[ext_resource type="PackedScene" uid="uid://bo24stwjjcle2" path="res://platform.tscn" id="7_ffdsa"]
[ext_resource type="Script" path="res://Assets/Levels/Tutorial/fight_scene.gd" id="8_ctx22"]
[ext_resource type="PackedScene" uid="uid://cgffe5fe6qvm0" path="res://Assets/HubbaYoyo/hubayoyo_collectable.tscn" id="8_ehhpa"]
[ext_resource type="PackedScene" uid="uid://bltdj4nw6ndve" path="res://Assets/Bubblegum/bubblegum.tscn" id="9_fyju7"]
[ext_resource type="Script" path="res://Assets/Levels/Tutorial/verticality.gd" id="9_tjmmm"]
[ext_resource type="PackedScene" uid="uid://j3odn6l30nx4" path="res://Assets/BLC/blc.tscn" id="11_dhrsm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5ai2"]
size = Vector2(37.7, 21.7)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_i3gf4")

[node name="Node" type="Node" parent="."]
process_mode = 3
script = ExtResource("1_de0vp")

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(351.445, 189.427)

[node name="YoyoSpawn" type="Node2D" parent="."]
position = Vector2(2684, -298)

[node name="Player" parent="." instance=ExtResource("2_y5e70")]
position = Vector2(351.445, 189.427)
initial_state = false

[node name="ColorRect" type="ColorRect" parent="Player"]
z_index = -100
offset_left = -324.0
offset_top = -576.0
offset_right = 324.0
offset_bottom = 576.0
color = Color(0.529412, 0.807843, 0.921569, 1)
script = ExtResource("4_7o7v3")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
script = ExtResource("3_fudyo")

[node name="Hud" parent="Player" instance=ExtResource("4_asu40")]

[node name="Platform3" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(283, 233)
scale = Vector2(2, 0.5)

[node name="Platform4" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(794, 249)
scale = Vector2(0.254, 0.5)

[node name="Platform6" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1037, 167)
rotation = 1.5708
scale = Vector2(0.254, 0.5)

[node name="Platform8" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1292, 181)
rotation = 3.14159
scale = Vector2(0.254, 0.5)

[node name="Platform7" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1387, 105)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="Platform5" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(859, 233)
scale = Vector2(2, 0.5)

[node name="Platform9" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1371, 233)
scale = Vector2(2, 0.5)

[node name="Platform10" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1795, -151)
rotation = 1.5708
scale = Vector2(1.5, 0.5)

[node name="Platform11" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1679, -255)
rotation = 1.5708
scale = Vector2(1.5, 0.5)

[node name="Platform12" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1649, -288)
scale = Vector2(1.5, 0.5)

[node name="Platform13" parent="." instance=ExtResource("7_ffdsa")]
position = Vector2(1765, -152)
scale = Vector2(1.5, 0.5)

[node name="DMoveRight" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 344.75
offset_top = 139.0
offset_right = 384.75
offset_bottom = 179.0
text = "D - Move Right"
autowrap_mode = 0

[node name="SpaceJump" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 758.0
offset_top = 146.0
offset_right = 798.0
offset_bottom = 186.0
text = "W or Space - Jump"
autowrap_mode = 0

[node name="JumpBetweenWalls" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 1451.0
offset_top = 70.0
offset_right = 1627.0
offset_bottom = 123.0
text = "Jump Between Walls
	     to ascend"
autowrap_mode = 0

[node name="OrUpSameWall" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 1821.0
offset_top = -79.0
offset_right = 1997.0
offset_bottom = -26.0
text = "Or up the same wall"
autowrap_mode = 0

[node name="OrUpSameWall2" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 1850.0
offset_top = -352.0
offset_right = 2031.0
offset_bottom = -299.0
text = "Hanging on too long will
     cause you to slip"
autowrap_mode = 0

[node name="Spikes" parent="." instance=ExtResource("6_vnexj")]
position = Vector2(811, 241)

[node name="Spikes2" parent="." instance=ExtResource("6_vnexj")]
position = Vector2(843, 241)

[node name="FightScene" type="Node2D" parent="."]
script = ExtResource("8_ctx22")

[node name="UseTapeRope" type="RichTextLabel" parent="FightScene"]
clip_contents = false
offset_left = 2607.0
offset_top = -369.0
offset_right = 2788.0
offset_bottom = -316.0
text = " Use Tape Rope for
short range attacks"
autowrap_mode = 0

[node name="HubayoyoCollectable" parent="FightScene" instance=ExtResource("8_ehhpa")]
position = Vector2(2686, -246)

[node name="Platform14" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(2149, -152)
scale = Vector2(1.5, 0.5)

[node name="Platform15" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(2533, -152)
scale = Vector2(1.5, 0.5)

[node name="Platform16" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(2917, -152)
scale = Vector2(1.5, 0.5)

[node name="Platform18" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(3301, -152)
scale = Vector2(1.5, 0.5)

[node name="LeftWall" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(2533, -792)
rotation = 1.5708
scale = Vector2(2.5, 0.5)

[node name="RightWall" parent="FightScene" instance=ExtResource("7_ffdsa")]
position = Vector2(3333, -792)
rotation = 1.5708
scale = Vector2(2.5, 0.5)

[node name="JawbreakerSpawnPoint" type="Node2D" parent="FightScene"]
position = Vector2(2925, -615)

[node name="Verticality" type="Node2D" parent="."]
position = Vector2(768, 0)
script = ExtResource("9_tjmmm")

[node name="GumballSpawn" type="Node2D" parent="Verticality"]
position = Vector2(3103, -531)

[node name="TriggerVerticality" type="Area2D" parent="Verticality"]
position = Vector2(3094, -237)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Verticality/TriggerVerticality"]
position = Vector2(14.5, -8.5)
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_o5ai2")

[node name="TriggerPostVerticality" type="Area2D" parent="Verticality"]
position = Vector2(3480, -657)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Verticality/TriggerPostVerticality"]
position = Vector2(14.5, -8.5)
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_o5ai2")

[node name="VerticalityLabel" type="RichTextLabel" parent="Verticality"]
clip_contents = false
offset_left = 3014.0
offset_top = -567.0
offset_right = 3195.0
offset_bottom = -436.0
bbcode_enabled = true
text = "[center]Collect Gumballs[/center]"

[node name="Platform16" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(2917, -152)
scale = Vector2(1.5, 0.5)

[node name="Platform19" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(2918, -756)
scale = Vector2(1.5, 0.5)

[node name="Platform27" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3333, -586)
rotation = 1.5708
scale = Vector2(1.82, 0.5)

[node name="Platform21" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3300, -616)
scale = Vector2(1.5, 0.5)

[node name="Platform23" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3684, -616)
scale = Vector2(1.5, 0.5)

[node name="Platform26" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(4068, -616)
scale = Vector2(1.5, 0.5)

[node name="Platform22" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3300, -756)
scale = Vector2(1.5, 0.5)

[node name="Platform24" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3684, -756)
scale = Vector2(1.5, 0.5)

[node name="Platform25" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(4068, -756)
scale = Vector2(1.5, 0.5)

[node name="Platform20" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(2918, -756)
rotation = 1.57079
scale = Vector2(0.673, 0.5)

[node name="Platform17" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(2918, -616)
scale = Vector2(0.5, 0.5)

[node name="Platform18" parent="Verticality" instance=ExtResource("7_ffdsa")]
position = Vector2(3172, -616)
scale = Vector2(0.5, 0.5)

[node name="Bubblegum" parent="Verticality" instance=ExtResource("9_fyju7")]
position = Vector2(3362, -663)

[node name="Bubblegum2" parent="Verticality" instance=ExtResource("9_fyju7")]
position = Vector2(3485, -650)

[node name="Bubblegum3" parent="Verticality" instance=ExtResource("9_fyju7")]
position = Vector2(3572, -678)

[node name="VerticalityLabel2" type="RichTextLabel" parent="Verticality"]
clip_contents = false
offset_left = 3691.0
offset_top = -699.0
offset_right = 3931.0
offset_bottom = -646.0
bbcode_enabled = true
text = "[center]Be Careful
Spikes can pop your bubble[/center]"

[node name="Spikes" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4084, -716)
rotation = 3.14159

[node name="Spikes2" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4116, -716)
rotation = 3.14159

[node name="Spikes3" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4148, -716)
rotation = 3.14159

[node name="Spikes4" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4180, -716)
rotation = 3.14159

[node name="Spikes5" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4212, -716)
rotation = 3.14159

[node name="Spikes6" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4244, -716)
rotation = 3.14159

[node name="Spikes7" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4276, -716)
rotation = 3.14159

[node name="Spikes8" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4308, -716)
rotation = 3.14159

[node name="Spikes9" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4340, -716)
rotation = 3.14159

[node name="Spikes10" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4372, -716)
rotation = 3.14159

[node name="Spikes11" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4404, -716)
rotation = 3.14159

[node name="Spikes12" parent="Verticality" instance=ExtResource("6_vnexj")]
position = Vector2(4436, -716)
rotation = 3.14159

[node name="FanSection" type="Node2D" parent="."]

[node name="EndOfScene" type="Node2D" parent="."]
position = Vector2(530, -221)

[node name="Platform1" parent="EndOfScene" instance=ExtResource("7_ffdsa")]
position = Vector2(4689, -395)
scale = Vector2(1.62, 0.5)

[node name="Platform3" parent="EndOfScene" instance=ExtResource("7_ffdsa")]
position = Vector2(5135, -747)
rotation = 1.5708
scale = Vector2(1.5, 0.5)

[node name="Platform4" parent="EndOfScene" instance=ExtResource("7_ffdsa")]
position = Vector2(4719, -747)
rotation = 1.5708
scale = Vector2(0.953, 0.5)

[node name="Platform2" parent="EndOfScene" instance=ExtResource("7_ffdsa")]
position = Vector2(4719, -747)
scale = Vector2(1.5, 0.5)

[node name="RichTextLabel" type="RichTextLabel" parent="EndOfScene"]
offset_left = 4801.0
offset_top = -665.0
offset_right = 5034.0
offset_bottom = -579.0
bbcode_enabled = true
text = "[center]Congratulations[/center]"

[node name="RichTextLabel2" type="RichTextLabel" parent="EndOfScene"]
offset_left = 4800.0
offset_top = -607.0
offset_right = 5047.0
offset_bottom = -521.0
bbcode_enabled = true
text = "[center]You're in the Big Leagues now! Collect your chew
to continue[/center]"

[node name="Blc" parent="EndOfScene" instance=ExtResource("11_dhrsm")]
position = Vector2(4921, -452)

[connection signal="body_entered" from="Verticality/TriggerVerticality" to="Verticality" method="_on_trigger_verticality_body_entered"]
[connection signal="body_entered" from="Verticality/TriggerPostVerticality" to="Verticality" method="_on_trigger_post_verticality_body_entered"]
[connection signal="blc_collected" from="EndOfScene/Blc" to="." method="_on_blc_collected"]
